objects/metazoa3__snapshot_history__c.object
<CustomObject>
    <description>This is an administrative object for Snapshot Change and Release Automation. This object records the user story deployments for the parent Snapshot Sprint.</description>
    <fields>
        <fullName>metazoa3__command_after__c</fullName>
        <label>Command After Results</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__command_before__c</fullName>
        <label>Command Before Results</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__complete_after__c</fullName>
        <label>Complete After Tasks</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__complete_before__c</fullName>
        <label>Complete Before Tasks</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__created_username__c</fullName>
        <label>Created Username</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__deploy_record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment Record</label>
        <referenceTo>metazoa3__snapshot_push__c</referenceTo>
        <relationshipLabel>Snapshot Histories</relationshipLabel>
        <relationshipName>Snapshot_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>metazoa3__destination_username__c</fullName>
        <label>Destination Username</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_field_one__c</fullName>
        <label>Extra Field One</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_field_two__c</fullName>
        <label>Extra Field Two</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_flag_one__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_flag_two__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag Two</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__incomplete_after__c</fullName>
        <label>Incomplete After Tasks</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__incomplete_before__c</fullName>
        <label>Incomplete Before Tasks</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__merged_stories__c</fullName>
        <label>Merged Story List</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__object_type__c</fullName>
        <label>Object Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__snapshot_sprint__c</fullName>
        <label>Snapshot Sprint</label>
        <referenceTo>metazoa3__snapshot_sprint__c</referenceTo>
        <relationshipLabel>Snapshot Histories</relationshipLabel>
        <relationshipName>Snapshot_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>metazoa3__source_username__c</fullName>
        <label>Source Username</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Snapshot History</label>
    <listViews>
        <fullName>metazoa3__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>